--- a/templates/habit-card.mustache
+++ b/templates/habit-card.mustache
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="add-to-routine col-1 p-2 d-flex align-items-center justify-content-center">
-            <span class="fs-3 text-muted" title="Add habit to routine">></span>
+            <span class="fs-3 text-muted" title="Add habit to routine">▶</span>
         </div>
     </div>
 </div>
