--- a/templates/habit-card.mustache
+++ b/templates/habit-card.mustache
@@ -1,18 +1,15 @@
 <div class="card mb-3" id="{{uid}}">
     <div class="row g-0">
-        <div class="col-3 p-2 text-center">
+        <div class="col-md-4 p-2 text-center">
             <span class="activity-icon">{{icon}}</span>
         </div>
-        <div class="col-8">
+        <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">{{name}}</h5>
                 <p class="card-text">{{description}}</p>
                 <p class="card-text"><small class="text-muted">Estimated time: {{time}}
                         minutes</small></p>
             </div>
-        </div>
-        <div class="add-to-routine col-1 p-2 d-flex align-items-center justify-content-center">
-            <span class="fs-3 text-muted" title="Add habit to routine">▶</span>
         </div>
     </div>
 </div>
