Further refactoring to improve code modularity

--- a/templates/habit-list-item.mustache
+++ b/templates/habit-list-item.mustache
@@ -1,6 +1,6 @@
 <span class="list-group-item px-1 d-flex align-items-center" data-uid="{{uid}}">
     <button type="button" title="Delete habit completely"
-        class="delete-habit btn btn-sm btn-outline-danger float-end fw-bold px-1 py-0 mx-1">␡</button>
+        class="delete-habit btn btn-sm btn-outline-danger float-end fw-bold px-1 py-0 mx-1">X</button>
     <button type="button" title="Remove habit from routine"
         class="remove-from-routine btn btn-sm btn-outline-warning float-end fw-bold px-1 py-0 mx-1">X</button>
     <div class="px-1">{{icon}}</div>
