Add modular navbar and start page and small bug fixes

--- a/templates/habit-card.mustache
+++ b/templates/habit-card.mustache
@@ -1,4 +1,4 @@
-<div class="card mb-3" id="{{uid}}">
+<div class="card mb-3" data-uid="{{uid}}">
     <div class="row g-0">
         <div class="col-md-4 p-2 text-center">
             <span class="activity-icon">{{icon}}</span>
