--- a/css/routines.css
+++ b/css/routines.css
@@ -4,7 +4,10 @@ body {
 }
 
 main {
-  height: calc(100vh - 60px - 4.5em);
+  height: calc(100vh - 56px - 4.5em);
+}
+.home main {
+  height: unset;
 }
 
 footer .touch-icon {
