--- a/css/routines.css
+++ b/css/routines.css
@@ -27,8 +27,10 @@ footer .touch-icon {
   max-width: 540px;
 }
 
+.icon,
 .activity-icon {
-  font-size: 7.5rem;
+  font-size: 120px;
+  line-height: 140px;
 }
 
 .form-control.activity-icon {
