--- a/templates/routine-card.mustache
+++ b/templates/routine-card.mustache
@@ -4,5 +4,6 @@
         <h2 class="card-title">{{name}}</h2>
         <p class="card-text"><small class="text-muted">{{time}}</small></p>
         <a href="routine#{{uid}}" class="btn btn-primary stretched-link">Go to routine</a>
+        <button type="button" class="delete-routine btn btn-outline-danger mt-3">Remove routine</button>
     </div>
 </div>
