--- a/templates/habit-list-item.mustache
+++ b/templates/habit-list-item.mustache
@@ -7,6 +7,8 @@
     <div class="flex-grow-1 flex-shrink-1 px-1">{{name}}</div>
     <button type="button" title="Add habit to routine"
         class="add-to-routine btn btn-sm btn-outline-success fw-bold px-1 py-0 mx-1">+</button>
+    <button type="button" title="Make changes to habit"
+        class="edit-habit btn btn-sm btn-outline-secondary fw-bold px-1 py-0 mx-1">✎</button>
     <button type="button" title="Swap with above habit"
         class="reorder-in-routine btn btn-sm btn-outline-secondary px-1 py-0 mx-1">▲</button>
 </span>
